src/main/gen/org/abos/mizar/mizarplugin/MizarParser.java
// This is a generated file. Not intended for manual editing.
package org.abos.mizar.mizarplugin;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.abos.mizar.mizarplugin.psi.MizarTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MizarParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Article(b, l + 1);
  }

  /* ********************************************************** */
  // NON? Adjective-Arguments? Attribute-Symbol
  public static boolean Adjective(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Adjective")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADJECTIVE, "<adjective>");
    r = Adjective_0(b, l + 1);
    r = r && Adjective_1(b, l + 1);
    r = r && Attribute_Symbol(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // NON?
  private static boolean Adjective_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Adjective_0")) return false;
    consumeToken(b, NON);
    return true;
  }

  // Adjective-Arguments?
  private static boolean Adjective_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Adjective_1")) return false;
    Adjective_Arguments(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // Term-Expression-List | "(" Term-Expression-List ")"
  public static boolean Adjective_Arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Adjective_Arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADJECTIVE_ARGUMENTS, "<adjective arguments>");
    r = Term_Expression_List(b, l + 1);
    if (!r) r = Adjective_Arguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "(" Term-Expression-List ")"
  private static boolean Adjective_Arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Adjective_Arguments_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && Term_Expression_List(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Adjective+
  public static boolean Adjective_Cluster(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Adjective_Cluster")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADJECTIVE_CLUSTER, "<adjective cluster>");
    r = Adjective(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!Adjective(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Adjective_Cluster", c)) break;
    }
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Structure-Type-Expression ("," Structure-Type-Expression)*
  public static boolean Ancestors(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Ancestors")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ANCESTORS, "<ancestors>");
    r = Structure_Type_Expression(b, l + 1);
    p = r; // pin = 1
    r = r && Ancestors_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ("," Structure-Type-Expression)*
  private static boolean Ancestors_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Ancestors_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Ancestors_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Ancestors_1", c)) break;
    }
    return true;
  }

  // "," Structure-Type-Expression
  private static boolean Ancestors_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Ancestors_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && Structure_Type_Expression(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // Term-Expression | "(" Term-Expression-List ")"
  public static boolean Arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENTS, "<arguments>");
    r = Term_Expression(b, l + 1);
    if (!r) r = Arguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "(" Term-Expression-List ")"
  private static boolean Arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && Term_Expression_List(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Environment-Declaration Text-Proper
  static boolean Article(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Article")) return false;
    if (!nextTokenIs(b, ENVIRON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Environment_Declaration(b, l + 1);
    r = r && Text_Proper(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // filename
  public static boolean Article_Name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Article_Name")) return false;
    if (!nextTokenIs(b, FILENAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FILENAME);
    exit_section_(b, m, ARTICLE_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // Single-Assumption | Collective-Assumption | Existential-Assumption
  public static boolean Assumption(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assumption")) return false;
    if (!nextTokenIs(b, "<assumption>", ASSUME, GIVEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSUMPTION, "<assumption>");
    r = Single_Assumption(b, l + 1);
    if (!r) r = Collective_Assumption(b, l + 1);
    if (!r) r = Existential_Assumption(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Term-Expression-List? (( DOES | DO ) NOT)? Predicate-Symbol Term-Expression-List? ((( DOES | DO ) NOT)? Predicate-Symbol Term-Expression-List)* | Predicate-Identifier "[" Term-Expression-List? "]" | Term-Expression IS Adjective+ | Term-Expression IS Type-Expression
  public static boolean Atomic_Formula_Expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOMIC_FORMULA_EXPRESSION, "<atomic formula expression>");
    r = Atomic_Formula_Expression_0(b, l + 1);
    if (!r) r = Atomic_Formula_Expression_1(b, l + 1);
    if (!r) r = Atomic_Formula_Expression_2(b, l + 1);
    if (!r) r = Atomic_Formula_Expression_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // Term-Expression-List? (( DOES | DO ) NOT)? Predicate-Symbol Term-Expression-List? ((( DOES | DO ) NOT)? Predicate-Symbol Term-Expression-List)*
  private static boolean Atomic_Formula_Expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Atomic_Formula_Expression_0_0(b, l + 1);
    r = r && Atomic_Formula_Expression_0_1(b, l + 1);
    r = r && Predicate_Symbol(b, l + 1);
    r = r && Atomic_Formula_Expression_0_3(b, l + 1);
    r = r && Atomic_Formula_Expression_0_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Term-Expression-List?
  private static boolean Atomic_Formula_Expression_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_0")) return false;
    Term_Expression_List(b, l + 1);
    return true;
  }

  // (( DOES | DO ) NOT)?
  private static boolean Atomic_Formula_Expression_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_1")) return false;
    Atomic_Formula_Expression_0_1_0(b, l + 1);
    return true;
  }

  // ( DOES | DO ) NOT
  private static boolean Atomic_Formula_Expression_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Atomic_Formula_Expression_0_1_0_0(b, l + 1);
    r = r && consumeToken(b, NOT);
    exit_section_(b, m, null, r);
    return r;
  }

  // DOES | DO
  private static boolean Atomic_Formula_Expression_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, DOES);
    if (!r) r = consumeToken(b, DO);
    return r;
  }

  // Term-Expression-List?
  private static boolean Atomic_Formula_Expression_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_3")) return false;
    Term_Expression_List(b, l + 1);
    return true;
  }

  // ((( DOES | DO ) NOT)? Predicate-Symbol Term-Expression-List)*
  private static boolean Atomic_Formula_Expression_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Atomic_Formula_Expression_0_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Atomic_Formula_Expression_0_4", c)) break;
    }
    return true;
  }

  // (( DOES | DO ) NOT)? Predicate-Symbol Term-Expression-List
  private static boolean Atomic_Formula_Expression_0_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Atomic_Formula_Expression_0_4_0_0(b, l + 1);
    r = r && Predicate_Symbol(b, l + 1);
    r = r && Term_Expression_List(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (( DOES | DO ) NOT)?
  private static boolean Atomic_Formula_Expression_0_4_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_4_0_0")) return false;
    Atomic_Formula_Expression_0_4_0_0_0(b, l + 1);
    return true;
  }

  // ( DOES | DO ) NOT
  private static boolean Atomic_Formula_Expression_0_4_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_4_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Atomic_Formula_Expression_0_4_0_0_0_0(b, l + 1);
    r = r && consumeToken(b, NOT);
    exit_section_(b, m, null, r);
    return r;
  }

  // DOES | DO
  private static boolean Atomic_Formula_Expression_0_4_0_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_0_4_0_0_0_0")) return false;
    boolean r;
    r = consumeToken(b, DOES);
    if (!r) r = consumeToken(b, DO);
    return r;
  }

  // Predicate-Identifier "[" Term-Expression-List? "]"
  private static boolean Atomic_Formula_Expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Predicate_Identifier(b, l + 1);
    r = r && consumeToken(b, LB);
    r = r && Atomic_Formula_Expression_1_2(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, null, r);
    return r;
  }

  // Term-Expression-List?
  private static boolean Atomic_Formula_Expression_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_1_2")) return false;
    Term_Expression_List(b, l + 1);
    return true;
  }

  // Term-Expression IS Adjective+
  private static boolean Atomic_Formula_Expression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Term_Expression(b, l + 1);
    r = r && consumeToken(b, IS);
    r = r && Atomic_Formula_Expression_2_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Adjective+
  private static boolean Atomic_Formula_Expression_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_2_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Adjective(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!Adjective(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Atomic_Formula_Expression_2_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // Term-Expression IS Type-Expression
  private static boolean Atomic_Formula_Expression_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atomic_Formula_Expression_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Term_Expression(b, l + 1);
    r = r && consumeToken(b, IS);
    r = r && Type_Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
